        Alex Peshkov <peshkoff at mail.ru>

    * Bugfix CORE-3143
        Segmentation fault may occur when user interrupts GSTAT
      Contributor(s):
        Alex Peshkov <peshkoff at mail.ru>

    * Bugfix CORE-3141
        The last column in a view is returning as a null value even when it's not
      Contributor(s):
        Adriano dos Santos Fernandes <adrianosf at uol.com.br>

    * Bugfix CORE-3138
        Internal error or crash occurs when accessing any MON$ table after altering its structure
      Contributor(s):
        Dmitry Yemanov <dimitr at firebirdsql.org>

    * Bugfix CORE-3137
        Partial rollback is possible for a selectable procedure modifying data
      Contributor(s):
        Dmitry Yemanov <dimitr at firebirdsql.org>

    * Bugfix CORE-3131
        WIN1257_LV (Latvian) collation is wrong for 4 letters: A E I U. 
      Contributor(s):
        Dmitry Yemanov <dimitr at firebirdsql.org>

    * Bugfix CORE-3125
        Access violation in the routine Worker::shutdown()
      Contributor(s):
        Vlad Khorsun <hvlad at users.sourceforge.net>

    * Bugfix CORE-3119
        100% CPU USAGE (endless loop) in the remote protocol code related to events processing
      Contributor(s):
        Vlad Khorsun <hvlad at users.sourceforge.net>

    * Bugfix CORE-3095
        Client receive event's with count equal to 1 despite of how many times
        EVENT was POSTed in same transaction
      Contributor(s):
        Vlad Khorsun <hvlad at users.sourceforge.net>

    * Bugfix CORE-3091
        Built-in function POWER(X, Y) does not work when the X argument is negative
        and the Y value is scaled numeric but integral
      Contributor(s):
        Adriano dos Santos Fernandes <adrianosf at uol.com.br>

    * Bugfix CORE-3064
        Using both the procedure name and alias inside an explicit plan crashes the server
      Contributor(s):
        Dmitry Yemanov <dimitr at firebirdsql.org>

    * Bugfix CORE-3059